# Folder-Buddies

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  firebase.rules.json
.github/workflows/: build-release.yml  build-windows-dynamic.yml  build.yml  cloudflare-worker.yml  delete-action-runs.yml  security.yml  webapp.yml
branding/: README.md  icon.icns  make-icons.sh
client/: CMakeLists.txt  resources.qrc
client/include/app/: cli.h  mainwindow.h  session.h
client/include/clients/: client.h  web_compat.h
client/include/crypto/: auth.h  base91.h  crypto.h  token.h
client/include/fs/: fileio.h  fuse_backend.h  fuse_fs.h  osflags.h  projfs_loader.h  ram_cache.h
client/include/net/: common.h  native_quic.h  netutil.h  remote_fs.h  signaling.h  upnp.h
client/include/server/: server.h
client/src/: dev.folderbuddies.app.metainfo.xml  folderbuddies.appdata.xml  folderbuddies.desktop
client/src/app/: cli.cpp  main.cpp  mainwindow.cpp  session.cpp
client/src/clients/: client.cpp  web_compat.cpp
client/src/crypto/: crypto.cpp  token.cpp
client/src/fs/: fuse_backend.cpp  fuse_fs.cpp  projfs_loader.cpp  projfs_mount.cpp  projfs_mount_selftest.cpp  ram_cache.cpp  ram_cache_selftest.cpp
client/src/icons/: README.md  appicon.rc.in  icon.icns  make-icons.sh
client/src/macos/: Info.plist.in  folderbuddies.entitlements
client/src/net/: native_quic.cpp  native_quic_selftest.cpp  netutil.cpp  signaling.cpp  stream.cpp  upnp.cpp
client/src/server/: server.cpp  server_selftest.cpp
cloudflare/: README.md  worker.mjs  wrangler.toml
databases/: firebase.rules.json
databases/cloudflare/: CMakeLists.txt  README.md  worker.mjs  worker_core.cpp
docs/: SECURITY.md  building.md  cloudflare-production-hardening.md  firebase-fallback.md  firebase-production-rules.md  how-it-works.md  webrtc-compatibility.md
include/: auth.h  cli.h  client.h  common.h  crypto.h  fuse_fs.h  mainwindow.h  netutil.h  server.h  session.h  signaling.h  token.h  upnp.h  winfsp_resource.h  wordlist.h
src/: base91.cpp  cli.cpp  client.cpp  crypto.cpp  fuse_backend.cpp  fuse_fs.cpp  main.cpp  mainwindow.cpp  projfs_mount.cpp  server.cpp  session.cpp  signaling.cpp  token.cpp  upnp.cpp  web_compat.cpp  winfsp.rc.in
web/: README.md  app.js  config.js  index.html  style.css
web/.well-known/: security.txt
webapp/: README.md  app.js  config.js  index.html  robots.txt  style.css
